24 April 2007: Wouter
	- ttl per RR, for RRSIG rrsets and others.
	- dname_print debug function.
	- if type is not known, size calc will skip DNAME decompression.
	- RRSIG parsing and storing and putting in messages.
	- dnssec enabled unit tests (from nlnetlabs.nl and se queries).
	- EDNS extraction routine.

20 April 2007: Wouter
	- code comes through all of the unit tests now.
	- disabled warning about spurious extra data.
	- documented the RRSIG parse plan in msgparse.h.
	- rrsig reading and outputting.

19 April 2007: Wouter
	- fix unit test to actually to tests.
	- fix write iov helper, and fakevent code.
	- extra builtin testcase (small packet).
	- ttl converted to network format in packets.
	- flags converted correctly
	- rdatalen off by 2 error fixup.
	- uses less iov space for header.

18 April 2007: Wouter
	- review of msgparse code.
	- smaller test cases.

17 April 2007: Wouter
	- copy and decompress dnames.
	- store calculated hash value too.
	- routine to create message out of stored information.
	- util/data/msgparse.c for message parsing code.
	- unit test, and first fixes because of test.
		* forgot rrset_count addition.
		* did & of ptr on stack for memory position calculation.
		* dname_pkt_copy forgot to read next label length.
	- test from file and fixes
		* double frees fixed in error conditions.
		* types with less than full rdata allowed by parser.
		  Some dynamic update packets seem to use it.

16 April 2007: Wouter
	- following a small change in LDNS, parsing code calculates the
	  memory size to allocate for rrs.
	- code to handle ID creation.

13 April 2007: Wouter
	- parse routines. Code that parses rrsets, rrs.

12 April 2007: Wouter
	- dname compare routine that preserves case, with unit tests.
	
11 April 2007: Wouter
	- parse work - dname packet parse, msgparse, querysection parse,
	  start of sectionparse.

10 April 2007: Wouter
	- Improved alignment of reply_info packet, nice for 32 and 64 bit.